Fix #giturl_input width broken on mobile

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -15,6 +15,9 @@ table tr th code, table tr td code {
 }
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+  #giturl_input {
+    width: 80%; 
+  }
 }
 
 @media only screen and (min-width: 1024px) {
